fixed spacing issue

--- a/src/components/ShowAnswer.css
+++ b/src/components/ShowAnswer.css
@@ -4,6 +4,10 @@
 	justify-content: center;
 }
 
+.ans{
+	font-size: 200%
+}
+
 .green{
 	color: green;
 }
